--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -542,6 +542,8 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
   font-size: 13px;
   letter-spacing: 0.5px;
+  width: 180px;
+  text-align: center;
   text-transform: uppercase;
   display: inline-block;
   padding: 12px 30px;
@@ -559,6 +561,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 #hero .btn-book {
   margin-left: 15px;
+}
+@media (max-width: 430px) {
+  #hero .btn-book {
+    margin-left: 0px;
+    margin-top: 10px;
+  }
 }
 @media (min-width: 1024px) {
   #hero {
@@ -1203,7 +1211,6 @@ margin-top: 20px;
   line-height: 1;
   color: #cda45e;
   font-weight: 300;
-  text-transform: uppercase;
   font-family: "Poppins", sans-serif;
 }
 
