--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -542,6 +542,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero .btn-menu, #hero .btn-book {
   font-weight: 600;
   font-size: 13px;
+  width: 180px;
   letter-spacing: 0.5px; 
   text-align: center;
   text-transform: uppercase;
