--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -878,7 +878,10 @@ margin-top: 20px;
   border-radius: 50px;
   transition: all 0.3s ease-in-out;
 }
-
+.secPhone{
+  margin-top: 10px;
+  margin-left: 45px;
+  }
 .contact .info h4 {
   padding: 0 0 0 60px;
   font-size: 20px;
